# huno

./: .gitignore  CMakeLists.txt  README.md
include/huno/: Board.h  Card.h  Enums.h  Game.h  Mouse.h  Player.h  Utils.h
src/: Board.cpp  Card.cpp  Enums.cpp  Game.cpp  Main.cpp  Mouse.cpp  Player.cpp
